# vim: ft=dosini
[metadata]
name = pkgsym
description = Like brew link but without the brew
version = 0.1
url = https://github.com/Qyriad/pkgsym
author = Mikaela Szekely
author_email = mikaela.szekely@qyriad.me
license = MIT
platforms = any

[options.entry_points]
console_scripts = 
	pkgsym = pkgsym:main
