# vim: ft=dosini
[metadata]
name = pkgsym
description = Poor man's package manager (like brew link without the brew)
long_description = file: README.md
version = 0.2.1
url = https://github.com/Qyriad/pkgsym
author = Mikaela Szekely
author_email = mikaela.szekely@qyriad.me
license = MIT
platforms = any

[options.entry_points]
console_scripts = 
	pkgsym = pkgsym:main
