# vim: ft=dosini
[metadata]
name = pkgsym
description = Poor man's package manager (like brew link without the brew)
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: pkgsym.__version__
url = https://github.com/Qyriad/pkgsym
author = Mikaela Szekely
author_email = mikaela.szekely@qyriad.me
license = MIT
platforms = any

[options]
packages = find:

[options.entry_points]
console_scripts =
	pkgsym = pkgsym:main
